<resources>
    <string name="app_name">Kiosco App</string>
    <string name="proveedor_de_servicio">Proveedor de servicio</string>
    <string name="seleccione_proveedor_de_servicio">Selecciona el proveedor de servicio</string>
    <string name="seleccione_monto">Seleccione el monto que desea recargar</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar_carrito">Agregar al carrito</string>
    <string name="recargas">Recargas</string>
    <string name="carrito_de_servicios" />
    <string name="facturas_por_pagar" />
    <string name="consultar_otro_servicio" />
    <string name="local_variable_country">country</string>
    <string name="consultar_pendientes">Consultar Pendientes</string>
    <string name="digite_monto_pagar">Digite el monto a pagar</string>
    <string name="ingrese_numero_consultar">Por favor ingrese el número a consultar</string>
    <string name="completa_los_pasos">Completa los pasos para consultar tu factura</string>
    <string name="sin_resultados">Sin resultados</string>
    <string name="no_se_encontraron_datos">No hemos encontrado servicios asociados a la búsqueda.
        Realice nuevamente la búsqueda a utilizar las categorías.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- **REMESAS**-->
    <string name="step3_pay_info">3. Completa los datos de la remesa</string>
    <string name="source_of_funds">Origen de los fondos</string>
    <string name="western_union">Western Union</string>
    <string name="vigo">VIGO</string>
    <string name="destination_of_funds">Destino de los fondos</string>
    <string name="type_relentionship">Tipo de relación con el beneficiario</string>
    <string name="validate">Validar</string>
    <string name="check_data_title">1. Verifiquemos tus datos </string>
    <string name="remittancer">Remesedora</string>
    <string name="type_id">Tipo de identificación</string>
    <string name="number_id">Número de identificación</string>
    <string name="country">País</string>



</resources>