<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Remittances.SourceOfFoundFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subtitle"
            android:text="@string/step3_pay_info"
            android:textColor="@android:color/black">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text"
            android:text="@string/source_of_funds"
            android:layout_marginTop="20dp">

        </TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text"
            android:text="@string/destination_of_funds"
            android:layout_marginTop="20dp">

        </TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text"
            android:text="@string/type_relentionship"
            android:layout_marginTop="20dp">

        </TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:id="@+id/btnValidateCancel"
            style="@style/buttonOutlinePrimary"
            android:text="@string/Cancel">

        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            style="@style/buttonPrimary"
            android:id="@+id/btnValidateFounds"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            >

        </Button>
    </LinearLayout>
</LinearLayout>